CAY-2470 Can't bind SQLExec parameters in a loop
CAY-2472 Clear cached replacement query on mutation in all indirect queries
CAY-2476 Modeller: Fixed wrong behaviour of code generation dialog
CAY-2480 cayenne:cdbgen and cayenne:cgen have identical text in cayenne-maven-plugin
CAY-2484 maven plugins missing in 4.1.M2 release
CAY-2490 Added dbEntities from other datamaps in dbRelationship dialog.

----------------------------------
Release: 4.1.M2
Date: July 11, 2018
----------------------------------
Changes/New Features:

CAY-1683 Injectable PkGenerator
CAY-2304 Custom ClassLoader for Maven and Gradle plugins that use project dependencies
CAY-2334 cgen: option to force run from maven/gradle
CAY-2337 Save reverse engineering configuration with datamap XML
CAY-2372 Extract new modules from cayenne-server
CAY-2377 Cleanup deprecated code.
CAY-2391 cdbimport: add option to skip user-defined relationships
CAY-2393 Add sqlserver-docker profile to automate tests on SQLServer
CAY-2394 Upgrade to Apache Velocity 2.0
CAY-2395 cdbimport: add option to create project file
CAY-2396 Upgrade maven-assembly-plugin to 3.1.0
CAY-2398 Deprecate cayenne-joda
CAY-2400 Deprecate cayenne-dbcp2
CAY-2403 Extract eventbridges to top level
CAY-2404 Move itests to maven-plugins
CAY-2406 Add prefetch-related API to SQLSelect
CAY-2407 Modeler: add prefetch support for the SQLTemplate query
CAY-2410 Add prefetch type support for SQLTemplate query and SelectQuery
CAY-2414 Modeler: new icon design
CAY-2415 Transaction isolation and propagation support
CAY-2416 Change TreeMap for HashMap to store data in Cayenne model classes
CAY-2422 Modeler: Open driver setup window on driver load error
CAY-2438 Split DataChannel filter into two independent filters
CAY-2440 cdbimport: allow cross-schema relationships
CAY-2443 Make SqlTemplate and SqlExec possible to return generated keys

Bug Fixes:

CAY-2282 Various Update Issues With Vertical Inheritance
CAY-2370 ValueObjectType for byte[] fails lookup