@@ -181,18 +181,6 @@ name|javax
 operator|.
 name|swing
 operator|.
-name|table
-operator|.
-name|TableModel
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
 name|text
 operator|.
 name|JTextComponent
@@ -274,7 +262,9 @@ specifier|final
 name|int
 name|DB_ATTRIBUTE_PATH_COLUMN
 init|=
-literal|2
+name|ObjAttributeTableModel
+operator|.
+name|DB_ATTRIBUTE
 decl_stmt|;
 specifier|private
 name|String
