@@ -46,6 +46,7 @@ CAY-2476 Modeller: Fixed wrong behaviour of code generation dialog
 CAY-2480 cayenne:cdbgen and cayenne:cgen have identical text in cayenne-maven-plugin
 CAY-2484 maven plugins missing in 4.1.M2 release
 CAY-2490 Added dbEntities from other datamaps in dbRelationship dialog.
+CAY-2496 Fixed wrong table behavior: focus color, cleanup DBAttribute Path cell on select.
 
 ----------------------------------
 Release: 4.1.M2
